@@ -216,7 +216,6 @@ value caml_interprete(code_t prog, asize_t prog_size)
   struct caml__roots_block * volatile initial_local_roots;
   volatile code_t saved_pc = NULL;
   struct longjmp_buffer raise_buf;
-  value * modify_dest, modify_newval;
 #ifndef THREADED_CODE
   opcode_t curr_instr;
 #endif
@@ -706,29 +705,26 @@ value caml_interprete(code_t prog, asize_t prog_size)
     }
 
     Instruct(SETFIELD0):
-      modify_dest = &Field(accu, 0);
-      modify_newval = *sp++;
-    modify:
-      Modify(modify_dest, modify_newval);
+      caml_modify(&Field(accu, 0), *sp++);
       accu = Val_unit;
       Next;
     Instruct(SETFIELD1):
-      modify_dest = &Field(accu, 1);
-      modify_newval = *sp++;
-      goto modify;
+      caml_modify(&Field(accu, 1), *sp++);
+      accu = Val_unit;
+      Next;
     Instruct(SETFIELD2):
-      modify_dest = &Field(accu, 2);
-      modify_newval = *sp++;
-      goto modify;
+      caml_modify(&Field(accu, 2), *sp++);
+      accu = Val_unit;
+      Next;
     Instruct(SETFIELD3):
-      modify_dest = &Field(accu, 3);
-      modify_newval = *sp++;
-      goto modify;
+      caml_modify(&Field(accu, 3), *sp++);
+      accu = Val_unit;
+      Next;
     Instruct(SETFIELD):
-      modify_dest = &Field(accu, *pc);
+      caml_modify(&Field(accu, *pc), *sp++);
+      accu = Val_unit;
       pc++;
-      modify_newval = *sp++;
-      goto modify;
+      Next;
     Instruct(SETFLOATFIELD):
       Store_double_field(accu, *pc, Double_val(*sp));
       accu = Val_unit;
@@ -749,10 +745,10 @@ value caml_interprete(code_t prog, asize_t prog_size)
       sp += 1;
       Next;
     Instruct(SETVECTITEM):
-      modify_dest = &Field(accu, Long_val(sp[0]));
-      modify_newval = sp[1];
+      caml_modify(&Field(accu, Long_val(sp[0])), sp[1]);
+      accu = Val_unit;
       sp += 2;
-      goto modify;
+      Next;
 
 /* String operations */
 
